--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "body-parser": "^1.17.1",
+    "dotenv": "^8.2.0",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-ejs-layouts": "^2.3.0",
+    "fetch": "^1.1.0",
     "http": "0.0.0",
     "method-override": "^2.3.8",
-    "mongoose": "^4.9.2"
+    "mongoose": "^4.9.2",
+    "nodemon": "^2.0.3"
   }
 }
